[package]
name = "elfball"
version = "0.1.0"
authors = ["Cole Heslinga <cole.heslinga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib.git" }

[profile.release]
lto = "thin"